# iot-audit

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  compare_models.py  pyproject.toml  requirements-dev.txt  requirements.txt  train_logreg.py  train_mc_lgbm.py
ids_hw/ids_esp32_mlp/: mlp.h
ids_hw/results/: 20260501_210117_ArduinoMega2560_LogisticRegression_report.txt  20260501_210222_ArduinoMega2560_DecisionTree_depth5_report.txt  20260501_210404_ESP32-C3-SuperMini_LogisticRegression_report.txt  20260501_210525_ESP32-C3-SuperMini_DecisionTree_depth5_report.txt  20260501_211222_ESP32-C3-SuperMini_MLP_TFLite_INT8_report.txt  20260501_211355_ESP32-C3-SuperMini_XGBoost_INT8_report.txt  20260501_211519_ESP32-C3-SuperMini_LightGBM_INT8_report.txt
reports/: summary.json
reports/models/logreg/: metrics.json
reports/models/xgb/: metrics.json
reports_mc/models/lgbm_mc/: metrics.json
reports_mc/models/logreg_mc/: metrics.json
reports_mc/models/xgb_mc/: metrics.json
scripts/: analyze_dataset.py  check_split_hint.py  compare_models_mc.py  train_lgbm.py  train_mc_logreg.py  train_mc_rf.py  train_mc_xgb.py  train_rf.py  train_rf_balanced.py  train_xgb.py  visualize_dataset.py
src/iot_audit/: metrics.py  metrics_mc.py  preprocessing.py  preprocessing_mc.py  utils.py
